Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Type_INF__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type_INF__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>External Tradeshow/Seminar</fullName>
            </value>
            <value>
                <fullName>PKI Event</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Contact Request</fullName>
            </value>
            <value>
                <fullName>Request a Demo</fullName>
            </value>
            <value>
                <fullName>Request a Quote</fullName>
            </value>
            <value>
                <fullName>Request Information</fullName>
            </value>
            <value>
                <fullName>BAO</fullName>
            </value>
            <value>
                <fullName>EOL Referral</fullName>
            </value>
            <value>
                <fullName>Competitor Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>