Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Working_Stage_INF__c.field-meta.xml
<CustomField>
    <fullName>Lead_Working_Stage_INF__c</fullName>
    <label>Lead Working Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contacted 1st attempt</fullName>
            </value>
            <value>
                <fullName>Contacted 2nd attempt</fullName>
            </value>
            <value>
                <fullName>Showed Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>