Perkin-UAT/force-app/main/default/objects/Lead/fields/LQS_Drug_Discovery__c.field-meta.xml
<CustomField>
    <fullName>LQS_Drug_Discovery__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>LQS – Pre-Clinical Drug Discovery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified Lead - Warm</fullName>
            </value>
            <value>
                <fullName>Qualified Lead - Hot</fullName>
            </value>
            <value>
                <fullName>Turnback</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Zero Stage</fullName>
            </value>
            <value>
                <fullName>Create/Plan</fullName>
            </value>
            <value>
                <fullName>Qualify</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Prove</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
                <isActive>false</isActive>
                <label>Engaged</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Qualified Engaged</fullName>
                <isActive>false</isActive>
                <label>Qualified Engaged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>