Perkin-UAT/force-app/main/default/objects/Lead/fields/LT_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>LT_Age_in_Days__c</fullName>
    <formula>IF(IsConverted=true , ROUND(ConvertedDate - LastTransferDate ,0), ROUND(Today()- LastTransferDate ,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LT Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>