Perkin-UAT/force-app/main/default/objects/Lead/fields/Lub_Used_Oils_List__c.field-meta.xml
<CustomField>
    <fullName>Lub_Used_Oils_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lub/Used Oils List</label>
    <type>Checkbox</type>
</CustomField>