Perkin-UAT/force-app/main/default/objects/Lead/fields/LVI_List__c.field-meta.xml
<CustomField>
    <fullName>LVI_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LVI List</label>
    <type>Checkbox</type>
</CustomField>