Perkin-UAT/force-app/main/default/objects/Lead/fields/Media_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Media_Type_Description__c</fullName>
    <label>Media Type Description</label>
    <type>TextArea</type>
</CustomField>