Perkin-UAT/force-app/main/default/objects/Lead/fields/Month_Number_this_year__c.field-meta.xml
<CustomField>
    <fullName>Month_Number_this_year__c</fullName>
    <formula>MONTH( DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Number this year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>