Perkin-UAT/force-app/main/default/objects/Lead/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEADS assigned to a lead owner that is not a queue will have this field checked to be true in the system via backend</description>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>