Perkin-UAT/force-app/main/default/objects/Lead/fields/MQL_checked_date__c.field-meta.xml
<CustomField>
    <fullName>MQL_checked_date__c</fullName>
    <description>Will pass date when MQL field is checked</description>
    <label>MQL checked date</label>
    <type>Date</type>
</CustomField>