Perkin-UAT/force-app/main/default/objects/Lead/fields/Multi_Vendor_Contract__c.field-meta.xml
<CustomField>
    <fullName>Multi_Vendor_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Vendor Contract</label>
    <type>Checkbox</type>
</CustomField>