Perkin-UAT/force-app/main/default/objects/Lead/fields/Need_for_integrated_Billing_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Need_for_integrated_Billing_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need for integrated Billing/Invoicing?</label>
    <type>Checkbox</type>
</CustomField>