Perkin-UAT/force-app/main/default/objects/Lead/fields/New_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>New_Existing_Customer__c</fullName>
    <label>New/Existing Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>