Perkin-UAT/force-app/main/default/objects/Lead/fields/Next_Action_Date_INF__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date_INF__c</fullName>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>