Perkin-UAT/force-app/main/default/objects/Lead/fields/Non_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Non_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Qualified</label>
    <type>Checkbox</type>
</CustomField>