Perkin-UAT/force-app/main/default/objects/Lead/fields/NONMQL__c.field-meta.xml
<CustomField>
    <fullName>NONMQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ALL LEADS coming to the marketing queue will get assigned as NONMQL</description>
    <label>NONMQL</label>
    <type>Checkbox</type>
</CustomField>