Perkin-UAT/force-app/main/default/objects/Lead/fields/NonMQL_Count__c.field-meta.xml
<CustomField>
    <fullName>NonMQL_Count__c</fullName>
    <formula>IF(NONMQL__c = TRUE , 1,0)</formula>
    <label>NonMQL Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>