Perkin-UAT/force-app/main/default/objects/Lead/fields/OneSource__c.field-meta.xml
<CustomField>
    <fullName>OneSource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OneSource</label>
    <type>Checkbox</type>
</CustomField>