Perkin-UAT/force-app/main/default/objects/Lead/fields/Original_Lead_Source_Form__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Source_Form__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Original Lead Source - Form</label>
    <type>TextArea</type>
</CustomField>