Perkin-UAT/force-app/main/default/objects/Lead/fields/Other_PAA__c.field-meta.xml
<CustomField>
    <fullName>Other_PAA__c</fullName>
    <inlineHelpText>Please enter the Product Application Area</inlineHelpText>
    <label>Other PAA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>