Perkin-UAT/force-app/main/default/objects/Lead/fields/Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile__c</fullName>
    <description>Name of profile assigned to Owner.</description>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Profile</label>
    <type>Text</type>
</CustomField>