Perkin-UAT/force-app/main/default/objects/Lead/fields/Packaging_List__c.field-meta.xml
<CustomField>
    <fullName>Packaging_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packaging List</label>
    <type>Checkbox</type>
</CustomField>