Perkin-UAT/force-app/main/default/objects/Lead/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Business Strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>