Perkin-UAT/force-app/main/default/objects/Lead/fields/Pharma_QA_QC_List__c.field-meta.xml
<CustomField>
    <fullName>Pharma_QA_QC_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pharma QA/QC List</label>
    <type>Checkbox</type>
</CustomField>