Perkin-UAT/force-app/main/default/objects/Lead/fields/Pharma_R_D_List__c.field-meta.xml
<CustomField>
    <fullName>Pharma_R_D_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pharma R&amp;D List</label>
    <type>Checkbox</type>
</CustomField>