Perkin-UAT/force-app/main/default/objects/Lead/fields/PKI_Eloqua_ID__c.field-meta.xml
<CustomField>
    <fullName>PKI_Eloqua_ID__c</fullName>
    <description>This field is used as an external ID for the Eloqua and SFDC integration.</description>
    <externalId>true</externalId>
    <label>PKI Eloqua ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>