Perkin-UAT/force-app/main/default/objects/Lead/fields/PKI_GBL_Company_Local__c.field-meta.xml
<CustomField>
    <fullName>PKI_GBL_Company_Local__c</fullName>
    <description>Account Name in Local Language</description>
    <label>Company (Local)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>