Perkin-UAT/force-app/main/default/objects/Lead/fields/PKI_GBL_Department_Local__c.field-meta.xml
<CustomField>
    <fullName>PKI_GBL_Department_Local__c</fullName>
    <description>Department in Local Language</description>
    <label>Department (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>