Perkin-UAT/force-app/main/default/objects/Lead/fields/PKI_GBL_Name_Local__c.field-meta.xml
<CustomField>
    <fullName>PKI_GBL_Name_Local__c</fullName>
    <description>Name in Local Language</description>
    <label>Name(Local)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>