Perkin-UAT/force-app/main/default/objects/Lead/fields/PKI_GBL_Title_Local__c.field-meta.xml
<CustomField>
    <fullName>PKI_GBL_Title_Local__c</fullName>
    <description>Title in Local Language</description>
    <label>Title(Local)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>