Perkin-UAT/force-app/main/default/objects/Lead/fields/PKI_GLB_Address_Local__c.field-meta.xml
<CustomField>
    <fullName>PKI_GLB_Address_Local__c</fullName>
    <description>Address in Local Language</description>
    <label>Address(Local)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>