Perkin-UAT/force-app/main/default/objects/Lead/fields/PKI_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>PKI_Lead_Score__c</fullName>
    <businessOwnerGroup>ARQ_001004</businessOwnerGroup>
    <description>INC0304725:
Created for new combined lead scoring value</description>
    <inlineHelpText>New combined lead scoring value</inlineHelpText>
    <label>PKI Lead Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>