Perkin-UAT/force-app/main/default/objects/Lead/fields/PKI_Unique_Count__c.field-meta.xml
<CustomField>
    <fullName>PKI_Unique_Count__c</fullName>
    <description>Power of One - Returns the count of accounts in reports which include child records on the account and not the total record count</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>