Perkin-UAT/force-app/main/default/objects/Lead/fields/PKICountry__c.field-meta.xml
<CustomField>
    <fullName>PKICountry__c</fullName>
    <businessOwnerGroup>ARQ_001007</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to PKI Country object to use for other Territory detail information (ATEAM-1654)</description>
    <label>PKI Country</label>
    <referenceTo>PKI_Country__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>