Perkin-UAT/force-app/main/default/objects/Lead/fields/Primary_Interest__c.field-meta.xml
<CustomField>
    <fullName>Primary_Interest__c</fullName>
    <label>Primary Interest</label>
    <length>40</length>
    <type>Text</type>
</CustomField>