Perkin-UAT/force-app/main/default/objects/Lead/fields/Primary_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Primary_Qualification__c</fullName>
    <label>Primary Qualification</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>